# spinchain

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  rust.yml
benches/: even_omega.rs  spin.rs  spin_rotate.rs
examples/: Index.md
src/: build.rs  config.rs  config.toml  lib.rs  macros.rs  main.rs  obs.rs  spin.rs  spinchain.rs  spinchain_langevin.rs  writers.rs
tools/: plot_hist.gp
