[package]
name = "sc"
version = "0.1.26"
authors = ["Thomas Veness <thomas.veness@nottingham.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

toml = "0.5.8"
serde = { version ="1.0", features=["derive"] }
rand = "0.7.3"
rand_distr = "0.3.0"
itertools = "0.9.0"
indicatif = "0.15.0"
threadpool = "1.8.1"
clap = "2"
glob = "0.3.0"

#[profile.release]
#debug = true

[[bench]]
name = "spin_rotate"
harness = false

[[bench]]
name = "even_omega"
harness = false

[dev-dependencies]
criterion = "0.3"

