[package]
name = "sc"
version = "0.1.37"
authors = ["Thomas Veness <veness@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

toml = "0.5.9"
serde = { version = "1.0.137", features = ["derive"] }
rand = "0.8.5"
rand_distr = "0.4.3"
itertools = "0.10.3"
indicatif = "0.16.2"
threadpool = "1.8.1"
clap = { version = "3.1.18", features = ["derive"] }
glob = "0.3.0"
rustfft = "6.0.1"

#[profile.release]
#debug = true

[[bench]]
name = "spin_rotate"
harness = false

[[bench]]
name = "even_omega"
harness = false

[dev-dependencies]
criterion = "0.3.5"

