[package]
name = "sc"
version = "0.1.38"
authors = ["Thomas Veness <veness@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

toml = "0.8.19"
serde = { version = "1.0.209", features = ["derive"] }
rand = "0.8.5"
rand_distr = "0.4.3"
itertools = "0.13.0"
indicatif = "0.16.2"
threadpool = "1.8.1"
clap = { version = "4.5.16", features = ["derive"] }
glob = "0.3.1"
rustfft = "6.2.0"

#[profile.release]
#debug = true

[[bench]]
name = "spin_rotate"
harness = false

[[bench]]
name = "even_omega"
harness = false

[dev-dependencies]
criterion = "0.5.1"
